# proto-math

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  RunTests.bat  RunTests.sh  cmake_install.cmake  compile_commands.json  premake5.lua  proto-math-dynamic.make  proto-math-library.vcxproj  proto-math-library.vcxproj.filters  proto-math-static.make  proto-math-tests.make  proto-math-tests.vcxproj  proto-math.sln
.cache/clangd/index/: Main.c.9539A584AC51E150.idx  pm.h.E38882A0A8D3F9BB.idx  pmConstants.h.D9952AF10054AC4F.idx  pmGeneral.c.C9328CBE8318FE91.idx  pmGeneral.h.CA3E3BF54EA45428.idx  pmMat3.c.A2ED27A0C50FCF79.idx  pmMat3.h.6C1091B9BECA6C8A.idx  pmTrigonometry.c.E13281668674EBA8.idx  pmTrigonometry.h.3D4E810F535C0A26.idx  pmVec3.c.DE61AD4B55A9B06C.idx  pmVec3.h.4F4144CB7A5F8D89.idx  pmVec4.c.6A7A7C83924ECADC.idx  pmVec4.h.196ABDD81D159CFD.idx
cmake/: CMakeCache.txt  cmake_install.cmake  compile_commands.json
documentation/html/: _enum_8hpp_source.html  annotated.html  classes.html  classpm_1_1_mat-members.html  classpm_1_1_mat.html  classpm_1_1_vec-members.html  classpm_1_1_vec.html  classpm_1_1_vector2i-members.html  classpm_1_1_vector2i.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals_8hpp_source.html  index.html  mat_8hpp_source.html  namespacemembers.html  namespacemembers_func.html  namespacepm.html  namespacepm_1_1vector.html  namespaces.html  pm_8hpp_source.html  vec_8hpp_source.html  vector2i_8hpp.html  vector2i_8hpp_source.html
documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js
documentation/latex/: _enum_8hpp_source.tex  annotated.tex  classpm_1_1_mat.tex  classpm_1_1_vec.tex  classpm_1_1_vector2i.tex  files.tex  globals_8hpp_source.tex  mat_8hpp_source.tex  namespacepm.tex  namespacepm_1_1vector.tex  namespaces.tex  pm_8hpp_source.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc  vec_8hpp_source.tex  vector2i_8hpp.tex  vector2i_8hpp_source.tex
include/: Enum.hpp  constants.h  globals.hpp  mat.hpp  matrix.h  pm.h  pm.hpp  pmConstants.h  pmGeneral.h  pmMat3.h  pmTrigonometry.h  pmVec3.h  pmVec4.h  vec.h  vec.hpp  vector.hpp  vector2f.hpp  vector2i.hpp
lib/Debug/: proto-math-library.idb
scripts/: CompileAll.sh  RunAll.sh  RunMinimal.sh
src/: mat.cpp  pm.c  pmGeneral.c  pmMat3.c  pmTrigonometry.c  pmVec3.c  pmVec4.c  vec.c  vec.cpp  vector.cpp  vector2f.cpp  vector2i.cpp
test-bin/Debug/x64/: proto-math-tests
test-bin/Debug/x86/: proto-math-tests
test-bin/Release/x64/: proto-math-tests
test-bin/Release/x86/: proto-math-tests
tests/: Main.c  Main.cpp
